--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="inmueble">Inmueble</string>
     <string name="reportes">Reportes</string>
     <string name="title_activity_inmueble">InmuebleActivity</string>
+    <string name="guardar">Guardar</string>
 </resources>
