--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_archivo">ArchivoActivity</string>
     <string name="title_activity_date">DateActivity</string>
+    <string name="title_activity_contrato">ContratoActivity</string>
 
     <string name="direccion">Dirección</string>
     <string name="telefono">Telefono</string>
@@ -33,4 +34,11 @@
     <string name="acerca_de">Acerca de...</string>
     <string name="desarrolladorUno">Alexander Grajales</string>
     <string name="desarrolladorDos">Cristian Mejia</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fecha_final">Fecha Final</string>
+    <string name="fecha_inicial">Fecha Inicial</string>
+    <string name="estado">Estado</string>
+    <string name="seleccione_la_fecha">Seleccione la fecha</string>
 </resources>
