--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,13 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="title_activity_archivo">ArchivoActivity</string>
-    <string name="title_activity_date">DateActivity</string>
-    <string name="title_activity_contrato">ContratoActivity</string>
+    <string name="title_activity_archivo">Archivo</string>
+    <string name="title_activity_date">Fecha</string>
+    <string name="title_activity_contrato">Contrato</string>
+    <string name="title_activity_habitacion">Habitación</string>
+    <string name="title_activity_acerca_de">Acerca de...</string>
+    <string name="title_activity_usuario">Usuario</string>
+    <string name="title_activity_inmueble">Inmueble</string>
 
     <string name="direccion">Dirección</string>
     <string name="telefono">Telefono</string>
@@ -27,7 +31,6 @@
     <string name="capturas">Capturas</string>
     <string name="inmueble">Inmueble</string>
     <string name="reportes">Reportes</string>
-    <string name="title_activity_inmueble">InmuebleActivity</string>
     <string name="guardar">Guardar</string>
     <string name="patio">Patio</string>
     <string name="contrato">Contrato</string>
